<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/home_title" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/search_icon"
        android:title="@string/search_title" />

    <item
        android:id="@+id/programsFragment"
        android:enabled="true"
        android:icon="@drawable/programs_icon"
        android:title="@string/programs_title" />

    <item
        android:id="@+id/messagesFragment"
        android:enabled="true"
        android:icon="@drawable/messages_icon"
        android:title="@string/messages_title" />

    <item
        android:id="@+id/adminProfileFragment"
        android:enabled="true"
        android:icon="@drawable/programs_icon"
        android:title="@string/profile_title" />

</menu>